# monomux

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  Doxyfile.in  README.md
.github/codechecker/: config.json  skipfile.txt
.github/scripts/: get-dependencies.sh
.github/workflows/: build.yml  codechecker.yml
cmake/: Config.in.h  MonomuxCPack.cmake  MonomuxConfig.cmake  MonomuxDoxygen.cmake  MonomuxVersion.cmake  Version.cmake  Version.in.h  WriteVersion.in.cmake
docs/: README.md
include/: CMakeLists.txt
include/core/: CMakeLists.txt
include/core/monomux/: CheckedErrno.hpp  Debug.h  Log.hpp  Time.hpp  Version.hpp  unreachable.hpp
include/core/monomux/adt/: Atomic.hpp  FunctionExtras.hpp  Lazy.hpp  MemberFunctionHelper.hpp  Metaprogramming.hpp  POD.hpp  Ranges.hpp  RingBuffer.hpp  RingStorage.hpp  ScopeGuard.hpp  SmallIndexMap.hpp  StateMachine.hpp  Tagged.hpp  UniqueScalar.hpp  bucket_iterator.hpp  scope_guard.hpp
include/core/monomux/client/: Client.hpp  ControlClient.hpp  SessionData.hpp
include/core/monomux/control/: Message.hpp  MessageBase.hpp  PascalString.hpp
include/core/monomux/message/: Message.hpp  MessageBase.hpp  PascalString.hpp
include/core/monomux/server/: ClientData.hpp  Dispatch.ipp  Server.hpp  SessionData.hpp
include/core/monomux/system/: Backtrace.hpp  BufferedChannel.hpp  Channel.hpp  CheckedPOSIX.hpp  CommunicationChannel.hpp  CurrentPlatform.hpp  EPoll.hpp  Environment.hpp  Event.hpp  Handle.hpp  HandleTraits.hpp  IOEvent.hpp  Pipe.hpp  Platform.hpp  Process.hpp  ProcessTraits.hpp  Pty.hpp  SignalHandling.hpp  SignalTraits.hpp  Socket.hpp  fd.hpp
include/frontend/: CMakeLists.txt
include/frontend/monomux/: CommandLine.hpp  FrontendExitCode.hpp
include/frontend/monomux/client/: App.hpp  Main.hpp  SessionManagement.hpp  Terminal.hpp
include/frontend/monomux/server/: Main.hpp
include/implementation/: CMakeLists.txt
include/implementation/monomux/client/: Client.hpp  ControlClient.hpp  Dispatch.ipp  Main.hpp  SessionData.hpp  Terminal.hpp
include/implementation/monomux/server/: ClientData.hpp  Dispatch.ipp  Server.hpp  SessionData.hpp
include/implementation/monomux/system/: Crash.hpp  Signal.hpp
include/monomux/: Log.hpp
include/monomux/adt/: ScopeGuard.hpp  Tagged.hpp  UniqueScalar.hpp  scope_guard.hpp
include/monomux/system/: Pipe.hpp  Process.hpp  Pty.hpp  Socket.hpp
include/unix/: CMakeLists.txt
include/unix/monomux/system/: EPoll.hpp  UnixBacktrace.hpp  UnixDomainSocket.hpp  UnixHandleTraits.hpp  UnixPipe.hpp  UnixPlatform.hpp  UnixProcess.hpp  UnixProcessTraits.hpp  UnixPty.hpp  UnixSignalTraits.hpp  fd.hpp  (+2 more)
src/: CMakeLists.txt  CheckedPOSIX.hpp  Config.cpp  Config.hpp  Config.in.h  Environment.hpp  ExitCode.hpp  Log.cpp  Message.cpp  Message.hpp  MessageBase.hpp  POD.hpp  Process.cpp  Process.hpp  Pty.cpp  Pty.hpp  Server.Dispatch.ipp  Server.cpp  Server.hpp  ServerConnection.cpp  ServerConnection.hpp  Socket.cpp  Socket.hpp  SocketMessaging.hpp  Unreachable.cpp  Version.cpp  Version.hpp  Version.in.h  fd.hpp  main.cpp  unreachable.cpp
src/adt/: CMakeLists.txt  MemberFnScopeGuard.hpp  MovableAtomic.hpp  SmallIndexMap.hpp  TaggedPointer.hpp  unique_scalar.hpp
src/client/: CMakeLists.txt  Client.Dispatch.cpp  Client.Main.cpp  Client.Main.hpp  Client.cpp  Client.hpp  ControlClient.cpp  ControlClient.hpp  Dispatch.cpp  Dispatch.ipp  Main.cpp  Main.hpp  ServerConnection.cpp  ServerConnection.hpp  SessionData.hpp  Terminal.cpp  Terminal.hpp
src/control/: CMakeLists.txt  Message.cpp  Message.hpp  MessageBase.hpp  Messaging.hpp  SocketMessaging.hpp
src/core/: CMakeLists.txt  Log.cpp  Version.cpp  unreachable.cpp
src/core/message/: CMakeLists.txt  Message.cpp
src/core/system/: Backtrace.cpp  BufferedChannel.cpp  CMakeLists.txt  Channel.cpp  Environment.cpp  Handle.cpp  Pipe.cpp  SignalHandling.cpp  Socket.cpp
src/frontend/: CMakeLists.txt  CommandLine.cpp  MainOptions.hpp
src/frontend/client/: App.cpp  CMakeLists.txt  Main.cpp  SessionManagement.cpp  Terminal.cpp
src/frontend/server/: CMakeLists.txt  Main.cpp
src/implementation/: CMakeLists.txt  Monomux.dto
src/implementation/client/: CMakeLists.txt  Client.cpp  ControlClient.cpp  Dispatch.cpp
src/implementation/server/: CMakeLists.txt  ClientData.cpp  Dispatch.cpp  Server.cpp  SessionData.cpp
src/server/: CMakeLists.txt  ClientData.cpp  ClientData.hpp  Dispatch.cpp  Dispatch.ipp  Main.cpp  Main.hpp  Server.Dispatch.cpp  Server.Dispatch.ipp  Server.Main.cpp  Server.Main.hpp  Server.cpp  Server.hpp  Session.cpp  Session.hpp  SessionData.cpp  SessionData.hpp
src/system/: BufferedChannel.cpp  CMakeLists.txt  Channel.cpp  CheckedPOSIX.hpp  CommunicationChannel.cpp  CommunicationChannel.hpp  Crash.cpp  EPoll.cpp  EPoll.hpp  Environment.cpp  Environment.hpp  Event.cpp  POD.hpp  Pipe.cpp  Pipe.hpp  Process.cpp  Process.hpp  Pty.cpp  Pty.hpp  Signal.cpp  Signal.hpp  Socket.cpp  Socket.hpp  Time.hpp  epoll.cpp  epoll.hpp  fd.cpp  fd.hpp  unreachable.cpp  unreachable.hpp
src/unix/: CMakeLists.txt
src/unix/system/: CMakeLists.txt  EPoll.cpp  Platform.cpp  UnixBacktrace.cpp  UnixBacktraceDetail.cpp  UnixBacktraceDetail.hpp  UnixDomainSocket.cpp  UnixPipe.cpp  UnixPlatform.cpp  UnixProcess.cpp  UnixPty.cpp  UnixSignalHandling.cpp  UnixSocket.cpp  UnixTerminal.cpp  fd.cpp
test/: CMakeLists.txt  main.cpp
test/adt/: MetaprogrammingTest.cpp  RingBufferTest.cpp  RingStorageTest.cpp  SmallIndexMapTest.cpp  StateMachineTest.cpp  scope_guard_test.cpp
test/control/: MessageSerialisationTest.cpp
test/message/: MessageSerialisationTest.cpp
tools/: CMakeLists.txt
tools/dto_compiler/: CMakeLists.txt  DTOCompiler.cpp  Lex.cpp  Lex.hpp  README.md  Tokens.inc.h  dto_unit.cpp  dto_unit.hpp  generator.cpp  generator.hpp  lex.cpp  lex.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
tools/dto_compiler/ast/: decl.cpp  decl.hpp  dump.cpp  dump.hpp  expr.hpp  type.cpp  type.hpp
tools/resource_compiler/: CMakeLists.txt  Config.in.h  EmbeddedResources.cpp  EmbeddedResources.hpp  EmbeddedResources_Config.h  ResourceCompiler.cpp
